# cuvis-ai-schemas

./: .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  buf.gen.yaml  buf.yaml  codecov.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  dep_compat.yml  no-local-sources.yml  pypi-release.yml
cuvis_ai_schemas/: __init__.py  base.py  catalog.py
cuvis_ai_schemas/discovery/: __init__.py
cuvis_ai_schemas/enums/: __init__.py  types.py
cuvis_ai_schemas/execution/: __init__.py  context.py  monitoring.py
cuvis_ai_schemas/extensions/: __init__.py
cuvis_ai_schemas/extensions/ui/: __init__.py  node_display.py  port_display.py
cuvis_ai_schemas/grpc/: __init__.py  conversions.py
cuvis_ai_schemas/grpc/v1/: __init__.py  cuvis_ai_pb2.py  cuvis_ai_pb2.pyi  cuvis_ai_pb2_grpc.py
cuvis_ai_schemas/pipeline/: __init__.py  config.py  exceptions.py  ports.py  profiling.py
cuvis_ai_schemas/plugin/: __init__.py  config.py  manifest.py  manifest_capabilities.py
cuvis_ai_schemas/testing/: __init__.py  roundtrip.py  strategies.py
cuvis_ai_schemas/training/: __init__.py  callbacks.py  config.py  data.py  optimizer.py  run.py  scheduler.py  trainer.py
proto/cuvis_ai/grpc/v1/: cuvis_ai.proto
proto/cuvis_ai_schemas/grpc/v1/: cuvis_ai.proto
tests/: test_base_model.py  test_capabilities.py  test_catalog.py  test_imports.py  test_node_metadata.py  test_pipeline.py  test_plugin.py  test_port_display.py  test_property_validators.py  test_roundtrips.py  test_splits_resolve_config.py  test_training.py
tests/base/: test_base_model.py
tests/enums/: test_enums_and_context.py
tests/execution/: test_monitoring.py
tests/extensions/: test_node_metadata.py  test_port_display.py
tests/pipeline/: test_config.py  test_exceptions.py  test_ports.py  test_profiling.py
tests/plugin/: test_manifest.py
tests/proto/: test_proto_consistency.py
tests/training/: test_config.py  test_optimizer.py  test_scheduler.py  test_trainer.py
